<resources>
    <string name="app_name">Sangeet Box</string>
    <string name="music">Music</string>
    <string name="previous">BEFORE</string>
    <string name="play">START</string>
    <string name="next">AFTER</string>
    <string name="songs">SONGS</string>
    <string name="textContent">TextView</string>
    <string name="background">BACKGROUND</string>
    <string name="backg">BACKG</string>
    <string name="zayan">ZAYAN</string>
    <string name="icon">ICON</string>
    <string name="sangeet">SANGEET</string>
    <string name="box">BOX</string>

</resources>